fix: remove overflow to correct stacking context for blur

--- a/src/modules/main/donorList/donorList.css
+++ b/src/modules/main/donorList/donorList.css
@@ -90,7 +90,6 @@
     background: var(--slds-g-color-neutral-base-100);
     box-shadow: 0px 2px 2px 0px rgba(22, 50, 92, 0.07);
     position: relative;
-    overflow: hidden;
 }
 
 .main-content {
